--- a/plantswap/components/Filter/filter.module.scss
+++ b/plantswap/components/Filter/filter.module.scss
@@ -17,7 +17,7 @@
 		margin-bottom: 1rem;
 		margin-bottom: 1.875rem;
 		z-index: 5;
-		font-size: 0.65rem;
+		font-size: clamp(12px, 2em, 0.75vw);
 	}
 
 	&--index {
@@ -51,7 +51,7 @@
 		padding: 0.3rem 0;
 		border-bottom: 2px solid var(--color-black);
 		width: 100%;
-		font-size: 0.65rem;
+		font-size: clamp(12px, 2em, 0.75vw);
 		color: #ccc;
 
 		&--black {
