--- a/plantswap/components/Forms/formfield.module.scss
+++ b/plantswap/components/Forms/formfield.module.scss
@@ -94,7 +94,7 @@
       display: inline-block;
       border: var(--color-grey) 1px solid;
       border-radius: var(--border-radius);
-      color: var(--text-color);
+      color: var(--primary-text-color);
       // align-items: center;
       // justify-content: center;
 
