--- a/plantswap/components/Results/results.module.scss
+++ b/plantswap/components/Results/results.module.scss
@@ -11,7 +11,7 @@
   display: grid;
   width: 100%;
   border-radius: var(--border-radius);
-  color: var(--text-color);
+  color: var(--primary-text-color);
   background-color: var(--color-white);
   padding: 1rem;
   gap: 0.25rem 0.6rem;
