--- a/plantswap/components/Title/title.module.scss
+++ b/plantswap/components/Title/title.module.scss
@@ -6,7 +6,7 @@
     font-weight: 700;
     font-size: calc(1rem + 3vw);
     line-height: 1em;
-    color: var(--color-text);
+    color: var(--green_shade-8);
   }
 
   &--h1 {
