--- a/plantswap/components/Cta/cta.module.scss
+++ b/plantswap/components/Cta/cta.module.scss
@@ -1,5 +1,5 @@
 .cta {
-  background-color: var(--color-orange);
+  background-color: var(--color-blue);
   box-shadow: 0px 4px 4px var(--shadow);
   padding: 12px 22px;
   border-radius: 1em;
@@ -15,7 +15,7 @@
   }
 
   &--primary {
-    background-color: var(--color-orange);
+    background-color: var(--color-blue);
     color: var(--color-white);
   }
 
