--- a/plantswap/components/Header/header.module.scss
+++ b/plantswap/components/Header/header.module.scss
@@ -1,4 +1,6 @@
 .header {
+  margin: 2rem;
+  border-radius: 50px;
   position: sticky;
   display: flex;
   justify-content: space-between;
@@ -6,7 +8,7 @@
   height: var(--header-height);
   width: 100%;
   z-index: 10;
-  background-color: var(--color-green);
+  background-color: var(--color-white);
   scroll-snap-align: start;
 
   &__logo {
