--- a/plantswap/components/SwapFlowReturn/swapflowreturn.module.scss
+++ b/plantswap/components/SwapFlowReturn/swapflowreturn.module.scss
@@ -6,7 +6,7 @@
   height: 3rem;
 
   width: 100%;
-  color: var(--text-color);
+  color: var(--primary-text-color);
   font-weight: bold;
 
   &__click {
@@ -22,7 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--button-color);
+    background-color: var(--color-black);
     border-radius: 50%;
   }
 
