--- a/plantswap/components/Uploader/uploader.module.scss
+++ b/plantswap/components/Uploader/uploader.module.scss
@@ -3,14 +3,14 @@
   flex-direction: column;
   padding: 1rem;
   // border: 1px solid var(--text-color);
-  background-color: white;
+  background-color: var(--color-white);
 
   border-radius: 10px;
   gap: 1.5rem;
   width: 100%;
 
   // max-width: 500px;
-  color: var(--text-color);
+  color: var(--rimary-text-color);
 
   > svg {
     margin-bottom: 0.5rem;
@@ -28,7 +28,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    //   border: 1px dashed var(--text-color);
     border-radius: 10px;
     padding: 1rem;
     gap: 0.5rem;
