--- a/plantswap/components/Filter/Detail/detail.module.scss
+++ b/plantswap/components/Filter/Detail/detail.module.scss
@@ -1,76 +1,94 @@
 .details {
-	text-align: left;
-	color: var(--color-black);
+  text-align: left;
+  color: var(--color-black);
+  width: 100%;
+  background-color: var(--color-white);
+  border-radius: var(--border-radius);
+  padding: var(--S-spacer);
+  height: fit-content;
 
-	&[open] &--summery::after {
-		transform: rotate(0deg);
-	}
+  @media screen and (min-width: 60em) {
+    width: calc(calc(100% / 3) - calc(var(--S-spacer) / (3 / 2)));
+  }
 
-	&--summery {
-		display: block;
-		font-size: 1.5em;
-		margin-bottom: var(--M-spacer);
-		text-transform: capitalize;
-		color: var(--color-black);
+  &[open] &--summery {
+    // margin-bottom: var(--M-spacer);
 
-		font-weight: 700;
+    &::after {
+      transform: rotate(0deg);
+    }
+  }
 
-		&::marker {
-			list-style-type: '/25bc';
-			text-align: right !important;
-		}
+  &--summery {
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
 
-		&::after {
-			margin-left: 1ch;
-			display: inline-block;
-			transition: 0.2s;
-			transform: rotate(-48deg);
-			// content: '\203A';
-			content: '🐛';
-		}
-	}
+    font-size: 1.5em;
+    // margin-bottom: var(--M-spacer);
+    // text-transform: capitalize;
+    color: var(--color-black);
 
-	section {
-		display: flex;
-		flex-direction: row-reverse;
-		align-items: center;
-		text-align: left;
-		margin-bottom: var(--S-spacer);
+    font-weight: 700;
 
-		input {
-			align-self: flex-start;
-			text-align: left;
+    &::marker {
+      list-style-type: "/25bc";
+      text-align: right !important;
+    }
 
-			-webkit-appearance: none;
-			appearance: none;
-			/* creating a custom design */
-			width: 1.5em;
-			height: 1.5em;
-			padding: 0;
-			border-radius: 0.15em;
-			margin-right: 0.5em;
-			border: 0.15em solid var(--color-black);
-			outline: none;
-			cursor: pointer;
+    &::after {
+      margin-left: 1ch;
+      display: inline-block;
+      transition: 0.2s;
+      transform: rotate(-48deg);
+      height: fit-content;
+      // content: '\203A';
+      content: "🐛";
+    }
+  }
 
-			&:checked {
-				position: relative;
-				background-color: #29593f;
+  section {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    text-align: left;
+    margin-top: var(--S-spacer);
 
-				&::before {
-					content: '✔';
-					font-size: 1.5em;
-					color: #fff;
-					position: absolute;
-					right: 1px;
-					top: -6px;
-				}
-			}
-		}
-		label {
-			flex: 3;
-			align-self: flex-end;
-			height: 1.5em;
-		}
-	}
+    input {
+      align-self: flex-start;
+      text-align: left;
+
+      -webkit-appearance: none;
+      appearance: none;
+      /* creating a custom design */
+      width: 1.5em;
+      height: 1.5em;
+      padding: 0;
+      border-radius: 0.15em;
+      margin-right: 0.5em;
+      border: 0.15em solid var(--color-black);
+      outline: none;
+      cursor: pointer;
+
+      &:checked {
+        position: relative;
+        background-color: #29593f;
+
+        &::before {
+          content: "✔";
+          font-size: 1em;
+          color: #fff;
+          position: absolute;
+          right: 50%;
+          top: 50%;
+          transform: translate(50%, -50%);
+        }
+      }
+    }
+    label {
+      flex: 3;
+      align-self: flex-end;
+      height: 1.5em;
+    }
+  }
 }
