--- a/plantswap/components/Accordion/accordion.module.scss
+++ b/plantswap/components/Accordion/accordion.module.scss
@@ -1,48 +1,79 @@
 .accordion {
-    --icon-size: 1.2rem;
-    --icon-transform-duration: 0.25s;
+  --icon-size: 1.2rem;
 
-    padding: var(--L-spacer);
-    width: 100%;
+  padding: var(--page-padding);
+  width: 100%;
+  overflow: hidden;
 
-    summary {
-        list-style: none;
-        display: flex;
-        align-items: center;
+  @media screen and (min-width: 70em) {
+    padding: calc(var(--page-padding) / 2) calc(var(--page-padding) / 1)
+      calc(var(--page-padding) / 2) calc(var(--page-padding) / 2);
+  }
 
-        &::-webkit-details-marker {
-            display: none;
-        }
+  summary {
+    list-style: none;
+    display: flex;
+    align-items: center;
+
+    &::-webkit-details-marker {
+      display: none;
     }
+  }
 
-    &__icon {
-        position: relative;
-        margin-right: var(--M-spacer);
-        width: var(--icon-size);
-        height: var(--icon-size);
+  &[open] summary {
+    margin-bottom: var(--XS-spacer);
+  }
 
-        div {
-            position: absolute;
-            background-color: var(--color-black);
-            transition: transform var(--icon-transform-duration), opacity var(--icon-transform-duration);
+  &[open] p {
+    animation: gentle-appear 1s ease-in-out;
+  }
 
-            &:nth-child(1) {
-                top: calc(50% - 1px);
-                width: 100%;
-                height: 1.5px;
-            }
+  p {
+    animation: none;
+  }
 
-            &:nth-child(2) {
-                left: calc(50% - 1px);
-                width: 1.5px;
-                height: 100%;
-            }
-        }
+  &__icon {
+    position: relative;
+    margin-right: var(--M-spacer);
+    width: var(--icon-size);
+    height: var(--icon-size);
+
+    div {
+      position: absolute;
+      background-color: var(--color-black);
+      transition: transform var(--transition-settings),
+        opacity var(--transition-settings);
+
+      &:nth-child(1) {
+        top: calc(50%);
+        transform: translateY(-50%);
+        width: 100%;
+        height: 1px;
+      }
+
+      &:nth-child(2) {
+        left: calc(50%);
+        width: 1px;
+        height: 100%;
+      }
     }
+  }
 
-    &[open] .accordion__icon div:nth-child(2) {
-        transform: rotate(90deg);
-        background-color: transparent;
-        transition: 0.25s;
-    }
+  &[open] .accordion__icon div:nth-child(2) {
+    transform: rotate(90deg);
+    background-color: transparent;
+    transition: 0.25s;
+  }
+}
+
+@keyframes gentle-appear {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
