--- a/plantswap/components/Cta/cta.module.scss
+++ b/plantswap/components/Cta/cta.module.scss
@@ -2,10 +2,10 @@
   background-color: var(--color-orange);
   box-shadow: 0px 4px 4px var(--shadow);
   padding: 12px 22px;
-  border-radius: 1em;
+  border-radius: 30px;
   border: none;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 1.4;
   cursor: pointer;
   display: inline-block;
