--- a/plantswap/components/DetailpageHeaderImage/detailpageheaderimage.module.scss
+++ b/plantswap/components/DetailpageHeaderImage/detailpageheaderimage.module.scss
@@ -1,15 +1,22 @@
 .detailpageheaderimage {
-    position: relative;
+  position: relative;
 
-    margin-bottom: var(--XL-spacer);
+  width: 100%;
+  height: 100%;
+  //   height: calc(70vmax - var(--header-height));
 
+  @media screen and (max-width: 35em) {
+    margin-bottom: var(--page-padding);
+  }
+
+  @media screen and (min-width: 70em) {
+    // height: calc(70vmin - var(--header-height));
+  }
+
+  img {
     width: 100%;
-    height: 35rem;
+    height: 100%;
 
-    img {
-        width: 100%;
-        height: 100%;
-
-        object-fit: cover;
-    }
+    object-fit: cover;
+  }
 }
