--- a/plantswap/components/Hero/hero.module.scss
+++ b/plantswap/components/Hero/hero.module.scss
@@ -1,12 +1,104 @@
 .hero {
-	width: 100%;
-	flex-grow: 2;
-	flex-basis: 28em;
+  width: 100%;
+  //   flex-grow: 2;
+  height: calc(100vh - var(--header-height) - calc(var(--page-padding) * 2));
+  height: calc(100dvh - var(--header-height) - calc(var(--page-padding) * 2));
 
-	&__image {
-		width: calc(100% - 2rem);
+  @media screen and (min-width: 70em) {
+    height: calc(100vh - var(--header-height) - calc(var(--page-padding) * 1));
+    height: calc(100dvh - var(--header-height) - calc(var(--page-padding) * 1));
+  }
+
+  box-sizing: content-box;
+  position: relative;
+  //   flex-basis: 28em;
+
+  display: flex;
+  flex-direction: column-reverse;
+  //   flex-wrap: wrap-reverse;
+  //   align-items: flex-start;
+  //   height: auto;
+  gap: var(--page-padding);
+
+  &__image {
     object-fit: contain;
-    height: auto;
-    max-width: 48em;
-	}
+    height: fit-content;
+    width: 100%;
+    margin: auto;
+    object-position: center;
+  }
+
+  &__sidenote {
+    position: absolute;
+    bottom: calc(var(--page-padding) + 1rem);
+    right: 0;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    color: var(--color-text);
+    animation: bounce 0.8s linear infinite alternate;
+  }
+
+  &__content {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    gap: var(--S-spacer);
+    align-items: flex-start;
+    color: var(--color-text);
+    width: calc(100% - 25px);
+    max-width: 40em;
+    padding-bottom: var(--page-padding);
+
+    &-title {
+      width: min(calc(100% - 30px), 20em);
+    }
+
+    &-intro {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: var(--S-spacer) 0;
+
+      p {
+        color: inherit;
+        max-width: 35em;
+      }
+    }
+  }
+
+  @media screen and (min-width: 44em) {
+    flex-direction: row;
+
+    &__image {
+      object-position: top;
+      width: calc(100% - 50vw);
+      height: 100%;
+      margin: unset;
+      padding-bottom: var(--page-padding);
+    }
+
+    &__sidenote {
+      left: 0;
+      right: unset;
+    }
+  }
+
+  @media screen and (min-width: 70em) {
+    height: calc(100vh - var(--header-height) - calc(var(--page-padding) * 1));
+    height: calc(100dvh - var(--header-height) - calc(var(--page-padding) * 1));
+
+    &__image {
+      width: calc(100% - 40em);
+    }
+  }
+}
+
+@keyframes bounce {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(1em);
+  }
 }
