--- a/plantswap/components/Input/input.module.scss
+++ b/plantswap/components/Input/input.module.scss
@@ -3,7 +3,8 @@
   flex-wrap: wrap;
 
   &__label {
-    display: grid;
+    display: flex;
+    align-items: center;
     font-size: 14px;
     font-weight: 700;
     color: var(--primary-text-color);
@@ -69,12 +70,18 @@
 
 .form {
   &__label {
-    display: grid;
-    padding-bottom: var(--XS-spacer);
+    display: flex;
+    align-items: center;
+    gap: var(--XS-spacer);
+    font-weight: bold;
 
     font-size: 14px;
-    font-weight: 700;
     color: var(--primary-text-color);
+
+    svg {
+      width: 20px;
+      height: auto;
+    }
   }
 
   &__select,
@@ -88,7 +95,6 @@
     color: var(--primary-text-color);
     background-color: var(--color-white);
   }
- 
 
   &__description {
     padding-bottom: var(--S-spacer);
@@ -98,9 +104,7 @@
     color: var(--quaternary-text-color);
   }
 
-
   &__wrapper {
-    padding-bottom: var(--M-spacer);
     display: grid;
   }
 
