--- a/plantswap/components/Overview/overview.module.scss
+++ b/plantswap/components/Overview/overview.module.scss
@@ -1,34 +1,37 @@
 .overview {
-	position: relative;
-	padding: var(--M-spacer);
-	height: fit-content;
+  position: relative;
+  //   padding: var(--M-spacer);
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 
-	&:has(.window.filterWindow ) {
-		background-color: red;
-	}
+  &:has(.window.filterWindow) {
+    background-color: red;
+  }
 
-	&__plants {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-		grid-gap: var(--M-spacer);
-		margin: 0 auto;
+  &__plants {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-gap: var(--M-spacer);
+    // margin: 0 auto;
 
-		@media (min-width: 900px) {
-			grid-template-columns: repeat(3, minmax(240px, 1fr));
-		}
-	}
+    @media (min-width: 900px) {
+      grid-template-columns: repeat(3, minmax(240px, 1fr));
+    }
+  }
 
-	&__meta {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		font-size: 0.75rem;
-		margin-bottom: var(--M-spacer);
+  &__meta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.75rem;
+    margin-bottom: var(--S-spacer);
+    padding: var(--S-spacer) 0;
 
-		color: var(--color-black);
+    color: var(--color-black);
 
-		span {
-			font-weight: 700;
-		}
-	}
+    span {
+      font-weight: 700;
+    }
+  }
 }
