--- a/plantswap/src/app/[lang]/globals.css
+++ b/plantswap/src/app/[lang]/globals.css
@@ -1,4 +1,5 @@
 :root {
+  --page-padding: 1rem;
   --XXS-spacer: 4px;
   --XS-spacer: 8px;
   --S-spacer: 16px;
@@ -48,14 +49,13 @@
   --color-blue-light: color-mix(in srgb, var(--color-blue) 70%, transparent);
   --color-blue-lighter: #a3daff;
 
-  --max-width: 1100px;
+  --max-width: 1440px;
   --pill-border-radius: 99px;
   --border-radius: 8px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --max-width: 1100px;
   --pill-border-radius: 99px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -137,21 +137,21 @@
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+/* html, */
+/* body { */
+/* max-width: 100vw; */
+/* overflow-x: hidden; */
+/* } */
 
 body {
   color: rgb(var(--color-bg));
   /* background-color: #afc999; */
   background-color: var(--background-light);
-  transition: 1s;
-  min-height: 100dvh;
+  /* transition: 1s; */
+  /* min-height: 100dvh; */
 }
 
-body:has([aria-collapsed="false"]) {
+body:has([aria-expanded="true"]) {
   overflow: hidden;
   height: 100vh;
   transition: 1s;
@@ -184,5 +184,12 @@ ul {
   :root {
     --column-count: 2;
     --header-height: 70px;
+    --page-padding: 2rem;
+  }
+}
+
+@media (min-width: 70em) {
+  :root {
+    --page-padding: 6rem;
   }
 }
